<resources>
    <string name="app_name">Alura Food</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="nome_completo">Nome completo</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone com DDD</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">cadastrar</string>
</resources>