<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.atividades.FormularioCadastroActivity">

        <TextView
            android:id="@+id/formulario_cadastro_dados_pessoais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_formulario_cadastro_dados_pessoais"
            android:drawableLeft="@drawable/ic_formulario_cadastro_dados_pessoais"
            android:drawablePadding="10dp"
            android:text="@string/dados_pessoais"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_cadastro_nome_completo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_cadastro_dados_pessoais">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nome_completo"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_cadastro_cpf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/formulario_cadastro_nome_completo"
            app:layout_constraintStart_toStartOf="@id/formulario_cadastro_nome_completo"
            app:layout_constraintTop_toBottomOf="@id/formulario_cadastro_nome_completo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/cpf"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_cadastro_telefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/formulario_cadastro_cpf"
            app:layout_constraintStart_toStartOf="@id/formulario_cadastro_cpf"
            app:layout_constraintTop_toBottomOf="@id/formulario_cadastro_cpf">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/telefone"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_cadastro_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/formulario_cadastro_telefone"
            app:layout_constraintStart_toStartOf="@id/formulario_cadastro_telefone"
            app:layout_constraintTop_toBottomOf="@id/formulario_cadastro_telefone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_cadastro_senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/formulario_cadastro_email"
            app:layout_constraintStart_toStartOf="@id/formulario_cadastro_email"
            app:layout_constraintTop_toBottomOf="@id/formulario_cadastro_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/senha"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            app:layout_constraintEnd_toEndOf="@id/formulario_cadastro_senha"
            app:layout_constraintStart_toStartOf="@id/formulario_cadastro_senha"
            app:layout_constraintTop_toBottomOf="@id/formulario_cadastro_senha" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
